--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "private": true, 
   "scripts": {
     "start": "node server/index.js",
-    "dev": "nodeman server/index.js --watch server"
+    "dev": "nodemon server/index.js --watch server"
   },
   "dependencies": {
     "express": "^4.18.2"
