created api fucntion in client/src/model/session.ts

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "lib": ["es2020", "dom"],
+
   },
 
   "references": [
