--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
         "dev": "nodemon server/index.js --watch server"
     },
     "dependencies": {
-        "express": "^4.18.2"
+        "jsonwebtoken": "^9.0.0",
+        "express": "^4.18.2",
+        "dotenv": "^16.0.3",
+        "mongodb": "^5.3.0",
+        "bcrypt": "^5.1.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20"
